# semantic_search

./: .gitignore  README.md  TODO.txt  needed_stuff.txt
coco_place_classifier/: CMakeLists.txt  CaffeClassifier.cpp  CaffeClassifier.h  main.cpp
costmap_laser_node/: CMakeLists.txt  package.xml
costmap_laser_node/src/: main.cpp
door_detection/: CMakeLists.txt  TODO.txt  package.xml
door_detection/include/door_detection/: DoorDetector.h
door_detection/launch/: door_detect_test.launch
door_detection/src/: DoorDetector.cpp  main.cpp
execution/: CMakeLists.txt  package.xml
execution/action/: Execute.action
execution/include/execution/: ExecuteActionServer.h  Explorer.h  ObjectMapper.h  OctoMapper.h  Searcher.h  StartRotationStateMachine.h
execution/src/: ExecuteActionServer.cpp  Explorer.cpp  ObjectMapper.cpp  OctoMapper.cpp  Searcher.cpp  StartRotationStateMachine.cpp  main.cpp
execution_test/: CMakeLists.txt  package.xml
execution_test/include/execution_test/: ExecuteActionServer.h  Explorer.h  ObjectMapper.h  Searcher.h
execution_test/src/: ExecuteActionServer.cpp  Explorer.cpp  ObjectMapper.cpp  OctoMapper.cpp  Searcher.cpp  StartRotationStateMachine.cpp  main.cpp
gmapping_3dmap/: CMakeLists.txt  package.xml
gmapping_3dmap/include/gmapping_3dmap/: OctoGMapper.h  OctoMapper.h  slam_gmapping.h
gmapping_3dmap/src/: OctoGMapper.cpp  main.cpp  slam_gmapping.cpp
hardware/: CMakeLists.txt  package.xml
hardware/launch/: 10_hl_planner.launch  1_turtlebot.launch  2_cam1_laser.launch  3_cam2_laser_filter.launch  4_cam1_settings_move_base.launch  5_cam2_settings_footprint.launch  6_door_detection.launch  7_vision.launch  8_mapping_stupid.launch  9_execution.launch  basic.launch  cartographer.launch  cartographer_rosbag.launch  execution_test.launch  exploration_test.launch  mapping.launch  mapping_3dgmapping_rosbag.launch  mapping_octomap_rosbag.launch  mapping_rosbag.launch  multi_asus.launch  multimapping_3dgmapping.launch  multimapping_3dgmapping_rosbag.launch  only_execution.launch  only_hl_planner.launch  only_mapping.launch  only_transform.launch  only_vision.launch  rosbag.launch  rtabmap.launch  rtabmap_rosbag.launch  semantic_mapping.launch  semantic_mapping_rosbag.launch  semantic_mapping_v2.launch  semantic_mapping_v2_rosbag.launch  semantic_mapping_visionresults.launch  turtlebot.launch
hardware/launch/includes/: 3dgmapping.launch.xml  3dmultigmapping.launch.xml  description.launch.xml  door_detection.launch.xml  robot.launch.xml  (+8 more)
hardware/param/: costmap_common_params.yaml  costmap_converter_params.yaml  costmap_exploration.yaml  costmap_exploration_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  scan_filter_chain.yaml  smoother.yaml  teb_local_planner_params.yaml  turtlebot_urg_lidar_2d.lua  turtlebot_urg_lidar_depth_3d.lua
hardware/scripts/: full_mapping_script.sh  kill_all.sh  save_result.sh
hardware/urdf/: kobuki_hexagons_own_sensors.urdf.xacro
hl_planner/: CMakeLists.txt  package.xml
hl_planner/src/: HierarchyMap.cpp  Planner.cpp  main.cpp
mouse_control/: CMakeLists.txt  package.xml
mouse_control/launch/: mouse_control.launch
mouse_control/src/: main.cpp
multimap_gmapping3d/: CMakeLists.txt  TODO.txt  package.xml
multimap_gmapping3d/src/: HierarchyOctoGMapper.cpp  OctoGMapper.cpp  OctoMapper.cpp  main.cpp  slam_gmapping.cpp
my_laser_filter/: CMakeLists.txt  package.xml
my_laser_filter/src/: main.cpp
object_place_db_generator/: CMakeLists.txt  CaffeClassifier.cpp  bla.py  hierarchy_viewer.py  main.cpp  obj_place_db_generator.py  obj_prob_viewer.py  place_place_db_generator.py  sdf.py  test.py  test2.py
odom_to_tf/: CMakeLists.txt  package.xml
odom_to_tf/src/: main.cpp
path_extraction/: CMakeLists.txt  package.xml
path_extraction/src/: main.cpp
prob_map_view/: CMakeLists.txt  package.xml
prob_map_view/msg/: CvImgMsg.msg  ProbMapMsg.msg
prob_map_view/src/: ImagePanel.cpp  ImageViewer.cpp  ImageViewer.fbp  ImageViewer_B.cpp  ImageViewer_B.h  ProbViewer.cpp  ProbViewer.fbp  ProbViewer_B.cpp  ProbViewer_B.h  main.cpp
semantic_mapping/: CMakeLists.txt  package.xml
semantic_mapping/src/: KnowledgeBase.cpp  VisionResult.cpp  main.cpp
semantic_mapping_v2/: CMakeLists.txt  TODO.txt  package.xml
semantic_mapping_v2/data/: .gitignore  .~lock.obj_places_map.dat#  .~lock.room_spread.dat#
semantic_mapping_v2/msg/: HierarchyLinkMsg.msg  HierarchyTestMsg.msg  ObjFoundMsg.msg  ObjectMapMsg.msg  RoomMsg.msg  RoomSwitchMsg.msg  RoomTypeMapMsg.msg
semantic_mapping_v2/src/: DoorMapper.cpp  HierarchyMapper.cpp  ObjectMapper.cpp  OctoMapper.cpp  RoomMapper.cpp  RoomTypeMapper.cpp  SlamGMapping.cpp  main.cpp
semantic_mapping_v2/srv/: DoorPoseSrv.srv  HierarchySrv.srv  MapSrv.srv  ObjFoundSrv.srv  ObjectMapSrv.srv  OctomapSrv.srv  RoomTypeMapSrv.srv  RoomTypeProbSrv.srv
testing_data/: CMakeLists.txt  package.xml
testing_data/launch/: basic.launch  mapping.launch  rtabmap.launch  rtabmap2.launch  rtabmap3.launch  semantic_mapping.launch
testing_data/scripts/: FindTest.py  MappingTestObj.py  MappingTestRoom.py  MappingTestRoom2.py  VisionResultDump.py  VisionResultPub.py  calcPath.py  calcPathFull.py  door_out.py  doorway_vis.py  exchange.py  exchange2.py  expecte_img_gen.py  exploration_tester.py  explore_path_extraction.py  explore_resulte_writer.py  image_classify.py  image_out.py  merge_obj_thresh.py  obj_param.py  occ_repub.py  path_repub.py  path_split.py  peek_extractor.py  plot.txt  plot2.txt  plot3.txt  plot4.txt  plot_l.txt  rosbag_img_view.py  rotate_and_crop.py  search_plot.py  simple_path_extractor.py  vision_result_pub.py  vision_test.py
testing_data/src/: main.cpp
velocity_scale/: CMakeLists.txt  package.xml
velocity_scale/src/: main.cpp
vision/: CMakeLists.txt  TODO.txt  package.xml
vision/msg/: DetectionSample.msg  ObjectDetectionMsg.msg  ObjectDetectionSample.msg  ObjectFoundMsg.msg  PlaceRecognitionMsg.msg  VisionMsg.msg
vision/src/: CaffeClassifier.cpp  YoloDetector.cpp  main.cpp
(+140 files in other folders)
